@@ -4,6 +4,7 @@ version x Unreleased
 	* Add 'jug execute --keep-failed' to preserve locks on failing tasks.
 	* Add 'jug cleanup --failed-only' to remove locks from failed tasks
 	* 'jug status' and 'jug graph' now display failed tasks
+	* Check environmental exit variables by default (suggested by Renato Alves, issue #66)
 	* Fix 'jug sleep-until' in the presence of barrier() (issue #71)
 
 version 1.6.9 Tue Aug 6 2019 by luispedro
